# empa

./: .gitignore  Cargo.toml
crates/empa/: Cargo.toml
crates/empa/src/: access_mode.rs  adapter.rs  arwa.rs  compare_function.rs  compute_pipeline.rs  device.rs  js_support.js  lib.rs  native.rs  pipeline_constants.rs  query.rs  sampler.rs  shader_module.rs
crates/empa/src/buffer/: buffer.rs  usage.rs
crates/empa/src/command/: bind_group.rs  encoder.rs  index.rs  vertex.rs
crates/empa/src/driver/: driver.rs  mod.rs  native.rs  web.rs
crates/empa/src/render_pipeline/: depth_stencil_test.rs  fragment_stage.rs  multisample_state.rs  primitive_assembly.rs  render_pipeline.rs  vertex.rs  vertex_attribute.rs  vertex_stage.rs
crates/empa/src/render_target/: attachment.rs  mod.rs  multisample_attachment.rs  render_layout.rs  render_target.rs
crates/empa/src/resource_binding/: bind_group.rs  bind_group_layout.rs  mod.rs  pipeline_layout.rs  typed_bind_group_entry.rs
crates/empa/src/texture/: format.rs  image_copy_texture.rs  mod.rs  texture_1d.rs  texture_2d.rs  texture_3d.rs  texture_multisampled_2d.rs  usage.rs
crates/empa_driver/: Cargo.toml
crates/empa_driver/src/: lib.rs
crates/empa_glam/: Cargo.toml
crates/empa_macros/: Cargo.toml
crates/empa_macros/src/: abi_sized.rs  buffer_usage.rs  lib.rs  pipeline_constants.rs  resources.rs  shader_source.rs  texture_usage.rs  vertex.rs
crates/empa_reflect/: Cargo.toml
crates/empa_reflect/src/: lib.rs
crates/empa_test/: Cargo.toml
crates/empa_test/tests/run-pass/: abi_struct_array.rs
empa/: Cargo.toml
empa/src/: abi.rs  adapter.rs  arwa.rs  compute_pipeline.rs  device.rs  js_support.js  lib.rs  pipeline_constants.rs  query.rs  sampler.rs  shader_module.rs  type_flag.rs
empa/src/buffer/: buffer.rs  mod.rs  usage.rs
empa/src/command/: bind_group.rs  encoder.rs  index.rs  mod.rs  vertex.rs
empa/src/render_pipeline/: depth_stencil_test.rs  fragment_stage.rs  mod.rs  primitive_assembly.rs  render_pipeline.rs  vertex.rs  vertex_attribute.rs  vertex_stage.rs
empa/src/render_target/: attachment.rs  mod.rs  multisample_attachment.rs  render_layout.rs  render_target.rs
empa/src/resource_binding/: bind_group.rs  bind_group_layout.rs  mod.rs  pipeline_layout.rs  typed_bind_group_entry.rs
empa/src/texture/: format.rs  image_copy_texture.rs  mipmap_levels.rs  mod.rs  texture_1d.rs  texture_2d.rs  texture_3d.rs  texture_multisampled_2d.rs  usage.rs
empa_arwa/: Cargo.toml
empa_arwa/src/: lib.rs
empa_cgmath/: Cargo.toml
empa_cgmath/src/: lib.rs
empa_glam/: Cargo.toml
empa_glam/src/: lib.rs
empa_macros/: Cargo.toml
empa_macros/src/: abi_sized.rs  lib.rs  pipeline_constants.rs  resources.rs  shader_source.rs  vertex.rs
empa_reflect/: Cargo.toml
empa_reflect/src/: abi.rs  lib.rs
empa_test/: Cargo.toml
empa_test/tests/: compile_test.rs
empa_test/tests/run-pass/: abi_nested_struct.rs
examples/native/0_triangle/: Cargo.toml
examples/native/0_triangle/src/: main.rs
examples/native/1_animated_triangle/: Cargo.toml
examples/native/1_animated_triangle/src/: main.rs
examples/native/2_textured_triangle/: Cargo.toml
examples/native/2_textured_triangle/src/: main.rs
examples/native/3_compute/: Cargo.toml
examples/native/3_compute/src/: main.rs  shader.wgsl
examples/native/4_cube_3d/: Cargo.toml
examples/native/4_cube_3d/src/: main.rs  shader.wgsl
examples/native/5_override_constant/: Cargo.toml
examples/native/5_override_constant/src/: main.rs  shader.wgsl
examples/web/0_triangle/: Cargo.toml
examples/web/0_triangle/src/: console_error_panic_hook.rs  main.rs  shader.wgsl
examples/web/1_animated_triangle/: Cargo.toml  index.html
examples/web/1_animated_triangle/src/: main.rs  shader.wgsl
examples/web/2_textured_triangle/: Cargo.toml  index.html
examples/web/2_textured_triangle/src/: main.rs  shader.wgsl
examples/web/3_compute/: Cargo.toml  index.html
examples/web/3_compute/src/: main.rs  shader.wgsl
examples/web/4_cube_3d/: Cargo.toml  index.html
examples/web/4_cube_3d/src/: main.rs
examples/web/5_compute_prefix_sum/: Cargo.toml
examples/web/5_compute_prefix_sum/src/: main.rs  scan.wgsl  uniform_add.wgsl  util.wgsl
examples/web/6_compute_atomic_array/: Cargo.toml  index.html
examples/web/6_compute_atomic_array/src/: main.rs  shader.wgsl
examples/web/7_buffer_projection/: Cargo.toml
examples/web/7_buffer_projection/src/: main.rs
examples/web/8_persistent_threads/: Cargo.toml  index.html
examples/web/8_persistent_threads/src/: main.rs  shader.wgsl
examples/web/9_timestamp/: Cargo.toml
examples/web/9_timestamp/src/: main.rs
