[workspace]
members = [
    "crates/empa",
    "crates/empa_glam",
    "crates/empa_macros",
    "crates/empa_reflect",
    "crates/empa_test",
    "examples/web/0_triangle",
    "examples/web/1_animated_triangle",
    "examples/web/2_textured_triangle",
    "examples/web/3_compute",
    "examples/web/4_cube_3d",
    "examples/web/5_compute_prefix_sum",
    "examples/web/6_compute_atomic_array",
    "examples/web/7_buffer_projection",
    "examples/web/8_persistent_threads",
    "examples/web/9_timestamp"
]
