[package]
name = "empa-arwa"
version = "0.1.0"
edition = "2021"
description = "ARWA integration for Empa."
authors = ["Roland Schermer <roland0507@gmail.com>"]
homepage = "https://github.com/RSSchermer/empa"
repository = "https://github.com/RSSchermer/empa"
license = "MIT"

[dependencies]
arwa = { path = "../../rudo/arwa" }
empa = { version = "0.1.0", path = "../empa" }
js-sys = "0.3.57"
staticvec = "0.11.5"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"

[dependencies.web-sys]
version = "0.3.57"
features = [
    "Gpu",
    "GpuCanvasCompositingAlphaMode",
    "GpuCanvasConfiguration",
    "GpuCanvasContext",
    "GpuPowerPreference",
    "GpuPredefinedColorSpace",
    "GpuRequestAdapterOptions"
]
