[package]
name = "empa-cgmath"
version = "0.1.0"
edition = "2021"
description = "Bridge crate between `empa` and `cgmath`."
authors = ["Roland Schermer <roland0507@gmail.com>"]
homepage = "https://github.com/RSSchermer/empa"
repository = "https://github.com/RSSchermer/empa"
license = "MIT"

[dependencies]
empa = { version = "0.1.0", path = "../empa" }
cgmath = "0.18.0"
