[package]
name = "empa-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the empa crate."
authors = ["Roland Schermer <roland0507@gmail.com>"]
homepage = "https://github.com/RSSchermer/empa"
repository = "https://github.com/RSSchermer/empa"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
codespan-reporting = "0.11.1"
empa-reflect = { version = "0.1.0", path = "../empa_reflect" }
include-preprocessor = { version = "0.1.0", path = "../../include_preprocessor/include_preprocessor/" }
proc-macro2 = "1.0.5"
quote = "1.0.2"

[dependencies.syn]
version = "1.0.5"
features = [
    "full"
]
