[package]
name = "empa-glam"
version = "0.1.0"
edition = "2021"
description = "Bridge crate between `empa` and `glam`."
authors = ["Roland Schermer <roland0507@gmail.com>"]
homepage = "https://github.com/RSSchermer/empa"
repository = "https://github.com/RSSchermer/empa"
license = "MIT"

[dependencies]
empa = { workspace = true }
glam = { workspace = true }
