[package]
name = "empa-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the empa crate."
authors = ["Roland Schermer <roland0507@gmail.com>"]
homepage = "https://github.com/RSSchermer/empa"
repository = "https://github.com/RSSchermer/empa"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
codespan-reporting = { workspace = true }
empa-reflect = { workspace = true }
include-preprocessor = { workspace = true }
naga = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }

[dependencies.syn]
workspace = true
features = [
    "full"
]
