cargo-features = ["per-package-target"]

[package]
name = "compute-example"
version = "0.1.0"
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false
forced-target = "wasm32-unknown-unknown"

[dependencies]
arwa = { version = "0.1.0", path = "../../../../rudo/arwa" }
empa = { version = "0.1.0", path = "../../../crates/empa", features = ["arwa"] }
futures = "0.3.21"
wasm-bindgen = "0.2.81"
