[package]
name = "cube-3d-example"
version = "0.1.0"
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false

[dependencies]
arwa = { version = "0.1.0", path = "../../../../rudo/arwa" }
empa = { version = "0.1.0", path = "../../../crates/empa", features = ["arwa"] }
empa-glam = { version = "0.1.0", path = "../../../crates/empa_glam" }
glam = "^0.24"
futures = "0.3.21"
wasm-bindgen = "0.2.81"
